finished stationary tests

--- a/hypothesis_tests/stationary_tests/stationary_tests.ipynb
+++ b/hypothesis_tests/stationary_tests/stationary_tests.ipynb
@@ -26,53 +26,90 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DateTime</th>\n",
-       "      <th>Junction</th>\n",
-       "      <th>ID</th>\n",
+       "      <th>region</th>\n",
+       "      <th>category</th>\n",
+       "      <th>parameter</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>powertrain</th>\n",
+       "      <th>year</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2017-07-01 00:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20170701001</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Historical</td>\n",
+       "      <td>EV stock share</td>\n",
+       "      <td>Cars</td>\n",
+       "      <td>EV</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>percent</td>\n",
+       "      <td>0.00039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2017-07-01 01:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20170701011</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Historical</td>\n",
+       "      <td>EV sales share</td>\n",
+       "      <td>Cars</td>\n",
+       "      <td>EV</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>percent</td>\n",
+       "      <td>0.00650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2017-07-01 02:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20170701021</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Historical</td>\n",
+       "      <td>EV sales</td>\n",
+       "      <td>Cars</td>\n",
+       "      <td>BEV</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Vehicles</td>\n",
+       "      <td>49.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2017-07-01 03:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20170701031</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Historical</td>\n",
+       "      <td>EV stock</td>\n",
+       "      <td>Cars</td>\n",
+       "      <td>BEV</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Vehicles</td>\n",
+       "      <td>49.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2017-07-01 04:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20170701041</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Historical</td>\n",
+       "      <td>EV stock</td>\n",
+       "      <td>Cars</td>\n",
+       "      <td>BEV</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Vehicles</td>\n",
+       "      <td>220.00000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              DateTime  Junction           ID\n",
-       "0  2017-07-01 00:00:00         1  20170701001\n",
-       "1  2017-07-01 01:00:00         1  20170701011\n",
-       "2  2017-07-01 02:00:00         1  20170701021\n",
-       "3  2017-07-01 03:00:00         1  20170701031\n",
-       "4  2017-07-01 04:00:00         1  20170701041"
+       "      region    category       parameter  mode powertrain  year      unit  \\\n",
+       "0  Australia  Historical  EV stock share  Cars         EV  2011   percent   \n",
+       "1  Australia  Historical  EV sales share  Cars         EV  2011   percent   \n",
+       "2  Australia  Historical        EV sales  Cars        BEV  2011  Vehicles   \n",
+       "3  Australia  Historical        EV stock  Cars        BEV  2011  Vehicles   \n",
+       "4  Australia  Historical        EV stock  Cars        BEV  2012  Vehicles   \n",
+       "\n",
+       "       value  \n",
+       "0    0.00039  \n",
+       "1    0.00650  \n",
+       "2   49.00000  \n",
+       "3   49.00000  \n",
+       "4  220.00000  "
       ]
      },
      "execution_count": 1,
@@ -83,9 +120,127 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('test_ML_IOT.csv')\n",
+    "df = pd.read_csv('IEA Global EV Data 2024.csv')\n",
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sort_values(by='year', ascending=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results of KPSS Test:\n",
+      "Test Statistic           15.271944\n",
+      "p-value                   0.010000\n",
+      "Lags Used                69.000000\n",
+      "Critical Value (10%)      0.347000\n",
+      "Critical Value (5%)       0.463000\n",
+      "Critical Value (2.5%)     0.574000\n",
+      "Critical Value (1%)       0.739000\n",
+      "dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sleep\\AppData\\Local\\Temp\\ipykernel_19864\\3118006860.py:13: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is smaller than the p-value returned.\n",
+      "\n",
+      "  kpsstest = kpss(timeseries, regression='c')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.tsa.stattools import adfuller, kpss\n",
+    "\n",
+    "def adf_test(timeseries):\n",
+    "    print ('Results of Dickey-Fuller Test:')\n",
+    "    dftest = adfuller(timeseries, autolag='AIC')\n",
+    "    dfoutput = pd.Series(dftest[0:4], index=['Test Statistic','p-value','#Lags Used','Number of Observations Used'])\n",
+    "    for key,value in dftest[4].items():\n",
+    "        dfoutput['Critical Value (%s)'%key] = value\n",
+    "    print (dfoutput)\n",
+    "\n",
+    "def kpss_test(timeseries):\n",
+    "    print ('Results of KPSS Test:')\n",
+    "    kpsstest = kpss(timeseries, regression='c')\n",
+    "    kpss_output = pd.Series(kpsstest[0:3], index=['Test Statistic','p-value','Lags Used'])\n",
+    "    for key,value in kpsstest[3].items():\n",
+    "        kpss_output['Critical Value (%s)'%key] = value\n",
+    "    print (kpss_output)\n",
+    "\n",
+    "adf_test(df['year'])\n",
+    "kpss_test(df['year'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Statistic (Differenced): -30.68452840405167\n",
+      "p-value (Differenced): 0.0\n",
+      "Critical Value 1% (Differenced): -3.4308685627010562\n",
+      "Critical Value 5% (Differenced): -2.86176917909594\n",
+      "Critical Value 10% (Differenced): -2.566891987053574\n",
+      "\n",
+      "KPSS Statistic (Differenced): 0.011305383562878071\n",
+      "p-value (Differenced): 0.1\n",
+      "Critical Value 10% (Differenced): 0.347\n",
+      "Critical Value 5% (Differenced): 0.463\n",
+      "Critical Value 2.5% (Differenced): 0.574\n",
+      "Critical Value 1% (Differenced): 0.739\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sleep\\AppData\\Local\\Temp\\ipykernel_19864\\3669252042.py:14: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  kpss_result_diff = kpss(df_diff['value_diff'], regression='c')\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['value_diff'] = df['value'].diff().dropna()\n",
+    "\n",
+    "# Drop NaN values created by differencing\n",
+    "df_diff = df.dropna(subset=['value_diff'])\n",
+    "\n",
+    "# ADF test on differenced data\n",
+    "adf_result_diff = adfuller(df_diff['value_diff'])\n",
+    "print('ADF Statistic (Differenced):', adf_result_diff[0])\n",
+    "print('p-value (Differenced):', adf_result_diff[1])\n",
+    "for key, value in adf_result_diff[4].items():\n",
+    "    print(f'Critical Value {key} (Differenced): {value}')\n",
+    "\n",
+    "# KPSS test on differenced data\n",
+    "kpss_result_diff = kpss(df_diff['value_diff'], regression='c')\n",
+    "print('\\nKPSS Statistic (Differenced):', kpss_result_diff[0])\n",
+    "print('p-value (Differenced):', kpss_result_diff[1])\n",
+    "for key, value in kpss_result_diff[3].items():\n",
+    "    print(f'Critical Value {key} (Differenced): {value}')"
    ]
   }
  ],
