used standardscaler to get better resulrs in friedman test

--- a/hypothesis_tests/correlation_tests/correlation_task.ipynb
+++ b/hypothesis_tests/correlation_tests/correlation_task.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,196 +689,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hb and wbc (fail to reject H0) \n",
+      "Time and V16 (fail to reject H0) \n",
       "\n",
-      "hb and neut (fail to reject H0) \n",
+      "Time and V26 (fail to reject H0) \n",
       "\n",
-      "hb and lymph (fail to reject H0) \n",
+      "V1 and V12 (fail to reject H0) \n",
       "\n",
-      "hb and plt (fail to reject H0) \n",
+      "V1 and V24 (fail to reject H0) \n",
       "\n",
-      "hb and hba (fail to reject H0) \n",
+      "V2 and V17 (fail to reject H0) \n",
       "\n",
-      "hb and hbf (fail to reject H0) \n",
+      "V2 and V19 (fail to reject H0) \n",
       "\n",
-      "pcv and mchc (fail to reject H0) \n",
+      "V3 and V24 (fail to reject H0) \n",
       "\n",
-      "pcv and wbc (fail to reject H0) \n",
+      "V3 and Amount (fail to reject H0) \n",
       "\n",
-      "pcv and neut (fail to reject H0) \n",
+      "V7 and V19 (fail to reject H0) \n",
       "\n",
-      "pcv and lymph (fail to reject H0) \n",
+      "V8 and V9 (fail to reject H0) \n",
       "\n",
-      "pcv and plt (fail to reject H0) \n",
+      "V9 and V8 (fail to reject H0) \n",
       "\n",
-      "pcv and hba (fail to reject H0) \n",
+      "V9 and V19 (fail to reject H0) \n",
       "\n",
-      "pcv and hbf (fail to reject H0) \n",
+      "V9 and V22 (fail to reject H0) \n",
       "\n",
-      "rbc and rdw (fail to reject H0) \n",
+      "V9 and V24 (fail to reject H0) \n",
       "\n",
-      "rbc and neut (fail to reject H0) \n",
+      "V9 and V27 (fail to reject H0) \n",
       "\n",
-      "rbc and lymph (fail to reject H0) \n",
+      "V10 and V13 (fail to reject H0) \n",
       "\n",
-      "rbc and hba (fail to reject H0) \n",
+      "V11 and V21 (fail to reject H0) \n",
       "\n",
-      "rbc and hba2 (fail to reject H0) \n",
+      "V11 and V22 (fail to reject H0) \n",
       "\n",
-      "rbc and hbf (fail to reject H0) \n",
+      "V12 and V1 (fail to reject H0) \n",
       "\n",
-      "mcv and neut (fail to reject H0) \n",
+      "V12 and V24 (fail to reject H0) \n",
       "\n",
-      "mcv and lymph (fail to reject H0) \n",
+      "V12 and V25 (fail to reject H0) \n",
       "\n",
-      "mcv and hba (fail to reject H0) \n",
+      "V13 and V10 (fail to reject H0) \n",
       "\n",
-      "mcv and hbf (fail to reject H0) \n",
+      "V13 and V16 (fail to reject H0) \n",
       "\n",
-      "mchc and pcv (fail to reject H0) \n",
+      "V13 and V23 (fail to reject H0) \n",
       "\n",
-      "mchc and wbc (fail to reject H0) \n",
+      "V13 and V25 (fail to reject H0) \n",
       "\n",
-      "mchc and neut (fail to reject H0) \n",
+      "V13 and Class (fail to reject H0) \n",
       "\n",
-      "mchc and lymph (fail to reject H0) \n",
+      "V15 and V22 (fail to reject H0) \n",
       "\n",
-      "mchc and plt (fail to reject H0) \n",
+      "V15 and Class (fail to reject H0) \n",
       "\n",
-      "mchc and hba (fail to reject H0) \n",
+      "V16 and Time (fail to reject H0) \n",
       "\n",
-      "mchc and hba2 (fail to reject H0) \n",
+      "V16 and V13 (fail to reject H0) \n",
       "\n",
-      "mchc and hbf (fail to reject H0) \n",
+      "V17 and V2 (fail to reject H0) \n",
       "\n",
-      "rdw and rbc (fail to reject H0) \n",
+      "V19 and V2 (fail to reject H0) \n",
       "\n",
-      "rdw and wbc (fail to reject H0) \n",
+      "V19 and V7 (fail to reject H0) \n",
       "\n",
-      "rdw and neut (fail to reject H0) \n",
+      "V19 and V9 (fail to reject H0) \n",
       "\n",
-      "rdw and lymph (fail to reject H0) \n",
+      "V19 and V25 (fail to reject H0) \n",
       "\n",
-      "rdw and hba (fail to reject H0) \n",
+      "V21 and V11 (fail to reject H0) \n",
       "\n",
-      "rdw and hbf (fail to reject H0) \n",
+      "V22 and V9 (fail to reject H0) \n",
       "\n",
-      "wbc and hb (fail to reject H0) \n",
+      "V22 and V11 (fail to reject H0) \n",
       "\n",
-      "wbc and pcv (fail to reject H0) \n",
+      "V22 and V15 (fail to reject H0) \n",
       "\n",
-      "wbc and mchc (fail to reject H0) \n",
+      "V22 and Class (fail to reject H0) \n",
       "\n",
-      "wbc and rdw (fail to reject H0) \n",
+      "V23 and V13 (fail to reject H0) \n",
       "\n",
-      "wbc and hba2 (fail to reject H0) \n",
+      "V23 and V26 (fail to reject H0) \n",
       "\n",
-      "neut and hb (fail to reject H0) \n",
+      "V24 and V1 (fail to reject H0) \n",
       "\n",
-      "neut and pcv (fail to reject H0) \n",
+      "V24 and V3 (fail to reject H0) \n",
       "\n",
-      "neut and rbc (fail to reject H0) \n",
+      "V24 and V9 (fail to reject H0) \n",
       "\n",
-      "neut and mcv (fail to reject H0) \n",
+      "V24 and V12 (fail to reject H0) \n",
       "\n",
-      "neut and mchc (fail to reject H0) \n",
+      "V24 and V25 (fail to reject H0) \n",
       "\n",
-      "neut and rdw (fail to reject H0) \n",
+      "V25 and V12 (fail to reject H0) \n",
       "\n",
-      "neut and plt (fail to reject H0) \n",
+      "V25 and V13 (fail to reject H0) \n",
       "\n",
-      "neut and hba (fail to reject H0) \n",
+      "V25 and V19 (fail to reject H0) \n",
       "\n",
-      "neut and hba2 (fail to reject H0) \n",
+      "V25 and V24 (fail to reject H0) \n",
       "\n",
-      "lymph and hb (fail to reject H0) \n",
+      "V26 and Time (fail to reject H0) \n",
       "\n",
-      "lymph and pcv (fail to reject H0) \n",
+      "V26 and V23 (fail to reject H0) \n",
       "\n",
-      "lymph and rbc (fail to reject H0) \n",
+      "V27 and V9 (fail to reject H0) \n",
       "\n",
-      "lymph and mcv (fail to reject H0) \n",
+      "Amount and V3 (fail to reject H0) \n",
       "\n",
-      "lymph and mchc (fail to reject H0) \n",
+      "Class and V13 (fail to reject H0) \n",
       "\n",
-      "lymph and rdw (fail to reject H0) \n",
+      "Class and V15 (fail to reject H0) \n",
       "\n",
-      "lymph and plt (fail to reject H0) \n",
-      "\n",
-      "lymph and hba (fail to reject H0) \n",
-      "\n",
-      "lymph and hba2 (fail to reject H0) \n",
-      "\n",
-      "plt and hb (fail to reject H0) \n",
-      "\n",
-      "plt and pcv (fail to reject H0) \n",
-      "\n",
-      "plt and mchc (fail to reject H0) \n",
-      "\n",
-      "plt and neut (fail to reject H0) \n",
-      "\n",
-      "plt and lymph (fail to reject H0) \n",
-      "\n",
-      "plt and hba (fail to reject H0) \n",
-      "\n",
-      "plt and hba2 (fail to reject H0) \n",
-      "\n",
-      "plt and hbf (fail to reject H0) \n",
-      "\n",
-      "hba and hb (fail to reject H0) \n",
-      "\n",
-      "hba and pcv (fail to reject H0) \n",
-      "\n",
-      "hba and rbc (fail to reject H0) \n",
-      "\n",
-      "hba and mcv (fail to reject H0) \n",
-      "\n",
-      "hba and mchc (fail to reject H0) \n",
-      "\n",
-      "hba and rdw (fail to reject H0) \n",
-      "\n",
-      "hba and neut (fail to reject H0) \n",
-      "\n",
-      "hba and lymph (fail to reject H0) \n",
-      "\n",
-      "hba and plt (fail to reject H0) \n",
-      "\n",
-      "hba2 and rbc (fail to reject H0) \n",
-      "\n",
-      "hba2 and mchc (fail to reject H0) \n",
-      "\n",
-      "hba2 and wbc (fail to reject H0) \n",
-      "\n",
-      "hba2 and neut (fail to reject H0) \n",
-      "\n",
-      "hba2 and lymph (fail to reject H0) \n",
-      "\n",
-      "hba2 and plt (fail to reject H0) \n",
-      "\n",
-      "hba2 and hbf (fail to reject H0) \n",
-      "\n",
-      "hbf and hb (fail to reject H0) \n",
-      "\n",
-      "hbf and pcv (fail to reject H0) \n",
-      "\n",
-      "hbf and rbc (fail to reject H0) \n",
-      "\n",
-      "hbf and mcv (fail to reject H0) \n",
-      "\n",
-      "hbf and mchc (fail to reject H0) \n",
-      "\n",
-      "hbf and rdw (fail to reject H0) \n",
-      "\n",
-      "hbf and plt (fail to reject H0) \n",
-      "\n",
-      "hbf and hba2 (fail to reject H0) \n",
+      "Class and V22 (fail to reject H0) \n",
       "\n"
      ]
     }
@@ -905,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
