added seaborn changed some stuff and fixed scatterplot of pylot

--- a/data_visualisation/plotly/plotly_plots.ipynb
+++ b/data_visualisation/plotly/plotly_plots.ipynb
@@ -10,6 +10,7 @@
     "import random\n",
     "import time\n",
     "import pandas as pd\n",
+    "# Sustainable Lifestyle Rating Dataset https://www.kaggle.com/datasets/naveennas/sustainable-lifestyle-rating-dataset\n",
     "df = pd.read_csv('lifestyle_sustainability_data.csv')"
    ]
   },
@@ -8870,7 +8871,6 @@
     }
    ],
    "source": [
-    "\n",
     "fig = px.parallel_categories(categorical_df)\n",
     "fig.show()"
    ]
