reduced gensim for controlled development and added a corpus

--- a/stream_lit_and_gensim/stream_lit_io.ipynb
+++ b/stream_lit_and_gensim/stream_lit_io.ipynb
@@ -282,6 +282,113 @@
     "st.write(x, 'squared is', x * x)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lowercase: 0    $156,834 for the pathway to excellence in prac...\n",
+      "1                             $2,000 is a large chunk.\n",
+      "2    “$3 million is a lot easier to come by than $2...\n",
+      "3    $4.1million of that reported revenue is from t...\n",
+      "4    $466,000 in marketing and advertising expense ...\n",
+      "Name: 1, dtype: object\n",
+      "Removed numbers: 0    $, for the pathway to excellence in practice p...\n",
+      "1                                 $, is a large chunk.\n",
+      "2    “$ million is a lot easier to come by than $- ...\n",
+      "3    $.million of that reported revenue is from the...\n",
+      "4    $, in marketing and advertising expense and $,...\n",
+      "Name: 1, dtype: object\n",
+      "Removed punctuation: 0     for the pathway to excellence in practice pro...\n",
+      "1                                     is a large chunk\n",
+      "2     million is a lot easier to come by than  million\n",
+      "3    million of that reported revenue is from the s...\n",
+      "4     in marketing and advertising expense and  in ...\n",
+      "Name: 1, dtype: object\n",
+      "Removed stopwords: 0    pathway excellence practice program neighborho...\n",
+      "1                                          large chunk\n",
+      "2                      million lot easier come million\n",
+      "3    million reported revenue soldout u shows exten...\n",
+      "4    marketing advertising expense technology data ...\n",
+      "Name: 1, dtype: object\n",
+      "   0                                                  1\n",
+      "0  1  pathway excellence practice program neighborho...\n",
+      "1  2                                        large chunk\n",
+      "2  3                    million lot easier come million\n",
+      "3  4  million reported revenue soldout u shows exten...\n",
+      "4  5  marketing advertising expense technology data ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import streamlit as st\n",
+    "import pandas as pd\n",
+    "from gensim.models import Word2Vec\n",
+    "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
+    "from nltk.corpus import stopwords\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "# Function to train a Word2Vec model\n",
+    "def train_word2vec_model(corpus):\n",
+    "    model = Word2Vec(corpus, vector_size=100, window=5, min_count=1, workers=4)\n",
+    "    return model\n",
+    "\n",
+    "# Function to train a Doc2Vec model\n",
+    "def train_doc2vec_model(corpus):\n",
+    "    tagged_data = [TaggedDocument(words=words, tags=[str(i)]) for i, words in enumerate(corpus)]\n",
+    "    model = Doc2Vec(tagged_data, vector_size=100, window=2, min_count=1, workers=4)\n",
+    "    return model\n",
+    "\n",
+    "# Streamlit caching for loading corpus\n",
+    "@st.cache_resource\n",
+    "def load_corpus():\n",
+    "    file_directory = 'eng_news_2023_100K-sentences.txt'\n",
+    "    df = pd.read_csv(file_directory, sep='\\t', header=None)\n",
+    "    return df\n",
+    "\n",
+    "# Load the corpus\n",
+    "df = load_corpus()\n",
+    "\n",
+    "# Display the first few rows of the dataframe\n",
+    "st.write(df.head())\n",
+    "\n",
+    "def preprocess_text(text_series):\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    text_series = text_series.astype(str)\n",
+    "    \n",
+    "    # Convert to lowercase\n",
+    "    text_series = text_series.apply(lambda x: x.lower())\n",
+    "    print(\"Lowercase:\", text_series.head())\n",
+    "    \n",
+    "    # Remove numbers\n",
+    "    text_series = text_series.apply(lambda x: re.sub(r'\\d+', '', x))\n",
+    "    print(\"Removed numbers:\", text_series.head())\n",
+    "    \n",
+    "    # Remove punctuation\n",
+    "    text_series = text_series.apply(lambda x: re.sub(r'[^\\w\\s]', '', x))\n",
+    "    print(\"Removed punctuation:\", text_series.head())\n",
+    "    \n",
+    "    # Remove stopwords\n",
+    "    text_series = text_series.apply(lambda x: ' '.join(word for word in x.split() if word not in stop_words))\n",
+    "    print(\"Removed stopwords:\", text_series.head())\n",
+    "    \n",
+    "    return text_series\n",
+    "\n",
+    "\n",
+    "# Preprocess the text in the dataframe\n",
+    "df[1] = preprocess_text(df[1])\n",
+    "\n",
+    "# Display the preprocessed text\n",
+    "st.write(df.head())\n",
+    "print(df.head())\n",
+    "df.to_csv('preprocessed_text.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
